# PiperTTS-Mockingbird

./: .env.example  .gitignore  LICENSE  Open PiperTTS Mockingbird (Linux).sh  Open PiperTTS Mockingbird (Windows).vbs  Open PiperTTS Mockingbird (macOS).command  README.md  check_ellipsis.py  check_gg_quality.py  manifest.json  package.json  pyproject.toml  pytest.ini  readme.md  resource_tracker.py  restore_metadata.py  rules.json  show_filtered.py  test_training_start.py  test_whisper_quality.py
docs/: CHANGELOG.md  CHUNKING_GUIDE.md  ETHICAL_USAGE_DISCLAIMER.md  FUTURE_PLANS.md  HA_IMPLEMENTATION_SUMMARY.md  HA_INSTALLATION_GUIDE.md  HOME_ASSISTANT_INTEGRATION.md  MEMORY_OPTIMIZATION.md  MEMORY_SETTINGS.md  PERFORMANCE_GUIDE.md  SECURITY_HARDENING.md  SECURITY_QUICK_REFERENCE.md  Voice_Guide.html  WEBUI_USER_MANUAL.md  WYOMING_VERIFICATION.md  WebUI_User_Manual.html  dnr-ids.md
launchers/: Open Dataset Slicer.vbs  Open Piper Server.vbs  Open Storage Manager.vbs  Open Training Dashboard.vbs
notes/: line_check.txt
pages/: api-error.html  blocklist.html  guide.html  guide.js  lockout.html  options.html  orbs.js  popup.html
scripts/: smoke-dnr.js
src/: DEVELOPER.md  Developer README.md  audio_playback.py  auto_split.py  auto_transcribe.py  central_log.py  check_json_configs.py  check_voice_files.py  common_utils.py  convert_icon.py  default-heroes.js  download_piper.py  ha_export.py  piper_manager_ui.py  piper_server.py  piper_server_ui.py  requirements-frozen.txt  requirements.txt  storage_manager_ui.py  test_storage_info.py  training_dashboard_ui.py  (+4 more)
(+209 files in other folders)
