[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipertts-mockingbird"
version = "1.2.0"
authors = [
  { name = "PiperTTS Mockingbird Team" },
]
description = "A comprehensive, privacy-first local text-to-speech suite powered by Piper."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "wyoming",
    "pillow",
    "packaging",
]

[project.urls]
"Homepage" = "https://github.com/PiperTTS-Mockingbird-Team/PiperTTS-Mockingbird"
"Bug Tracker" = "https://github.com/PiperTTS-Mockingbird-Team/PiperTTS-Mockingbird/issues"

[tool.setuptools.packages.find]
where = ["src"]
